# sequential-recommender

./: .gitignore  .mega-linter.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  scans.yml
.trunk/: trunk.yaml
seq_rec/: lightning.py  losses.py  models.py  params.py
seq_rec/bentoml/: prepare.py  service.py
seq_rec/data/: lightning.py  load.py  prepare.py
tests/seq_rec/data/: test_load.py
