[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "seq_rec"
version = "0.1.0"
description = "Sequential Recommender with Torch, Lightning and Transformers"
readme = "README.md"
authors = [
  { name = "YuXuan Tay", email = "5795122+yxtay@users.noreply.github.com" },
]
license = "MIT"
requires-python = "~=3.12"
dependencies = [
  "bentoml~=1.3",
  "flaml[automl,blendsearch]~=2.3",
  "jsonargparse[signatures]~=4.35",
  "lancedb>=0.19,<1.0",
  "lightning~=2.5",
  "loguru>=0.7,<1.0",
  "mlflow~=2.19",
  "pandas~=2.2",
  "polars[pandas]~=1.19",
  "pylance>=0.25,<1.0",
  "sentence-transformers~=4.1",
  "tensorboard~=2.18",
  "torch~=2.5",
  "transformers~=4.52",
  "xxhash~=3.4",
]

[dependency-groups]
dev = ["onnxruntime~=1.20", "onnxscript>=0.2,<1.0", "pytest~=8.3"]

[project.scripts]
data = "mf_torch.data.prepare:main"

[tool.bentoml.build]
service = "seq_rec.bentoml.service:Service"
description = "file: ./README.md"
include = ["**/*.py", "README.md"]
envs = [{ name = "UV_NO_CACHE", value = "1" }]

[tool.bentoml.build.python]
packages = ["lancedb", "loguru", "pandas", "pylance", "torch", "xxhash"]
extra_index_url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
torch = [{ index = "torch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
fix = true
src = [".", "src", "tests"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # pydocstyle
  "E501",   # line-too-long
  "S311",   # suspicious-non-cryptographic-random-usage
  "COM812", # missing-trailing-comma, conflicts with ruff formatter
  "ERA001", # commented-out-code
  "ISC001", # single-line-implicit-string-concatenation, conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "S101", # assert
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
